--- a/index.css
+++ b/index.css
@@ -1,7 +1,7 @@
 body {
     font-family: "Verdana", "Geneva", sans-serif;
     font-weight: 300;
-    background-color: #f5f5f5;
+    background-color: #1B1B42;
     color: #555555;
     font-size: 14px;
     line-height: 1.6;
@@ -12,11 +12,11 @@ body {
 }
 
 .header {
-    background-color: #f5f5f5;
+    background-color: #1B1B42;
     font-weight: 400;
     font-size: 20px;
     letter-spacing: 2px;
-    color: #1B1B42;
+    color: #f5f5f5;
 }
 
 .centre {
