--- a/index.css
+++ b/index.css
@@ -1,8 +1,8 @@
 body {
     font-family: "Verdana", "Geneva", sans-serif;
     font-weight: 300;
-    background-color: #1B1B42;
-    color: #555555;
+    background-color: #f5f5f5;
+    color: #002D04;
     font-size: 14px;
     line-height: 1.6;
 }
@@ -12,11 +12,11 @@ body {
 }
 
 .header {
-    background-color: #1B1B42;
+    background-color: #f5f5f5;
     font-weight: 400;
     font-size: 20px;
     letter-spacing: 2px;
-    color: #f5f5f5;
+    color: #002D04;
 }
 
 .centre {
