--- a/index.css
+++ b/index.css
@@ -39,10 +39,10 @@ body {
     display: block;
     text-decoration: none;
     color: #002D04;
-    padding: 10px 15px;
+    padding: 20px;
     margin: 5px 0;
-    border-radius: 4px;
-    transition: background-color 0.2s, color 0.2s;
+    border-radius: 8px;
+    transition: background-color 2s, color 2s;
     cursor: pointer;
     border: none;
     width: 100%;
