--- a/index.css
+++ b/index.css
@@ -31,6 +31,7 @@ body {
     color: #002D04;
     background-color: #f5f5f5;
     padding: 20px;
+    margin: 5px 0;
     border-radius: 8px;
     box-shadow: 0 1px 3px rgba(0,0,0,0.1);
     position: relative;
@@ -40,16 +41,16 @@ body {
     display: block;
     text-decoration: none;
     color: #002D04;
+    background-color: #f5f5f5;
     padding: 20px;
     margin: 5px 0;
     border-radius: 8px;
-    transition: background-color 2s, color 2s;
+    transition: background-color 0.25s, color 0.25s;
     cursor: pointer;
     border: none;
     width: 100%;
     text-align: left;
     background: none;
-    font-size: 1rem;
 }
 
 .nav-button:hover {
