--- a/index.css
+++ b/index.css
@@ -27,7 +27,7 @@ body {
 }
 
 .centre-left {
-    width: 220px;
+    width: 100%;
     color: #002D04;
     background-color: #f5f5f5;
     padding: 20px;
@@ -51,6 +51,7 @@ body {
     width: 100%;
     text-align: left;
     background: none;
+    font-size: 14px;
 }
 
 .nav-button:hover {
