--- a/index.css
+++ b/index.css
@@ -27,7 +27,7 @@ body {
 }
 
 .centre-left {
-    width: 100%;
+    width: 220px;
     color: #002D04;
     background-color: #f5f5f5;
     padding: 20px;
@@ -48,7 +48,7 @@ body {
     transition: background-color 0.25s, color 0.25s;
     cursor: pointer;
     border: none;
-    width: 100%;
+    width: 220px;
     text-align: left;
     background: none;
     font-size: 14px;
