--- a/index.css
+++ b/index.css
@@ -27,6 +27,22 @@ body {
 }
 
 .centre-left {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.nav-button {
+    display: inline-block;
+    white-space: nowrap;
+}
+
+.nav-button:hover {
+    color: cornflowerblue;
+}
+
+/*
+.centre-left {
     width: 220px;
     color: #002D04;
     background-color: #f5f5f5;
@@ -53,11 +69,7 @@ body {
     background: none;
     font-size: 14px;
 }
-
-.nav-button:hover {
-    background-color: #e0e0e0;
-    color: #000;
-}
+*/
 
 .research-drop-one {
     display: none;
