--- a/index.css
+++ b/index.css
@@ -27,23 +27,8 @@ body {
 }
 
 .centre-left {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-}
-
-.nav-button {
-    display: inline-block;
-    white-space: nowrap;
-}
-
-.nav-button:hover {
-    color: cornflowerblue;
-}
-
-/*
-.centre-left {
     width: 220px;
+    min-height: 300px;
     color: #002D04;
     background-color: #f5f5f5;
     padding: 20px;
@@ -69,7 +54,7 @@ body {
     background: none;
     font-size: 14px;
 }
-*/
+
 
 .research-drop-one {
     display: none;
