--- a/index.css
+++ b/index.css
@@ -2,7 +2,7 @@ body {
     font-family: "Verdana", "Geneva", sans-serif;
     font-weight: 300;
     background-color: #f5f5f5;
-    color: #555555;
+    color: #002D04;
     font-size: 14px;
     line-height: 1.6;
 }
@@ -16,7 +16,7 @@ body {
     font-weight: 400;
     font-size: 20px;
     letter-spacing: 2px;
-    color: #1B1B42;
+    color: #002D04;
 }
 
 .centre {
@@ -28,6 +28,7 @@ body {
 
 .centre-left {
     width: 220px;
+    color: #002D04;
     background-color: #f5f5f5;
     padding: 20px;
     border-radius: 8px;
