--- a/index.css
+++ b/index.css
@@ -8,11 +8,11 @@ body {
 }
 
 .app {
-    padding: 5rem 10vw;
+    padding: 5rem 12.5vw;
 }
 
 .header {
-    font-weight: 300;
+    font-weight: 150;
     font-size: 20px;
     letter-spacing: 2px;
     color: #002D04;
@@ -20,18 +20,13 @@ body {
 
 .centre {
     display: flex;
-    flex: 1;
     margin: 20px 40px;
     gap: 40px;
 }
 
 .centre-left {
     width: 220px;
-    color: #002D04;
-    background-color: #f5f5f5;
-    padding: 20px;
-    border-radius: 8px;
-    box-shadow: 0 1px 3px rgba(0,0,0,0.1);
+    color: #111111;
 }
 
 .nav-button {
