--- a/index.css
+++ b/index.css
@@ -2,7 +2,7 @@ body {
     font-family: "Verdana", "Geneva", sans-serif;
     font-weight: 300;
     background-color: #f5f5f5;
-    color: #002D04;
+    color: #FF69B4;
     font-size: 14px;
     line-height: 1.6;
 }
@@ -20,12 +20,12 @@ body {
 
 .centre {
     display: flex;
+    margin: 20px 40px;
     gap: 40px;
 }
 
 .centre-left {
     width: 220px;
-    color: #FF69B4;
 }
 
 .nav-button {
