--- a/index.css
+++ b/index.css
@@ -1,6 +1,6 @@
 body {
     font-family: "Verdana", "Geneva", sans-serif;
-    font-weight: 300;
+    font-weight: 200;
     background-color: #f5f5f5;
     color: #002D04;
     font-size: 14px;
@@ -12,10 +12,11 @@ body {
 }
 
 .header {
-    font-weight: 150;
-    font-size: 20px;
+    font-weight: 400;
+    font-size: 2rem;
     letter-spacing: 2px;
     color: #002D04;
+    margin-bottom: 2.5rem;
 }
 
 .centre {
