--- a/index.css
+++ b/index.css
@@ -12,8 +12,9 @@ body {
 }
 
 .header {
+    font-family: "Verdana", "Geneva", sans-serif;
     font-weight: 100;
-    font-size: 2rem;
+    font-size: 1rem;
     letter-spacing: 2px;
     color: #002D04;
     margin-bottom: 2.5rem;
