--- a/index.css
+++ b/index.css
@@ -1,7 +1,7 @@
 body {
     font-family: "Verdana", "Geneva", sans-serif;
     font-weight: 100;
-    background-color: #f5f5f5;
+    background-color: #EBEDD8;
     color: #002D04;
     font-size: 14px;
     line-height: 1.6;
@@ -45,7 +45,7 @@ body {
 
 .nav-button:hover {
     background-color: #e0e0e0;
-    color: #002D04;
+    color: #EBEDD8;
     font-weight: bold;
 }
 
