--- a/index.css
+++ b/index.css
@@ -44,7 +44,7 @@ body {
 }
 
 .nav-button:hover {
-    background-color: #e0e0e0;
+    background-color: #002D04;
     color: #EBEDD8;
     font-weight: bold;
 }
