--- a/index.css
+++ b/index.css
@@ -49,11 +49,17 @@ body {
     font-weight: bold;
 }
 
-.sub-heading {
-    font-weight: bold;
-    margin: 10px 0 5px 5px;
-    font-size: 0.8rem;
-    color: #002D04;
+.dropdown {
+  display: none;
+  margin-left: 15px; /* indent child dropdowns */
+}
+
+.nav-button {
+  display: block;
+  text-decoration: none;
+  color: #002D04;
+  padding: 10px;
+  cursor: pointer;
 }
 
 .research-drop-one {
