--- a/index.css
+++ b/index.css
@@ -68,16 +68,6 @@ body {
   line-height: 1.3;    /* keeps text snug but readable */
 }
 
-/* .research-drop-one {
-    display: none;
-    margin-left: 10px;
-    margin-top: 5px;
-}
-
-.research-drop-one .nav-button {
-    font-size: 0.95rem;
-} */
-
 .footer {
     margin-top: 20px;
     font-size: 0.85rem;
@@ -119,6 +109,14 @@ body {
 
 .dot.active {
     background-color: #002D04;
+}
+
+.main-content {
+    width: 90ch;
+    max-width: 95vw;
+    text-align: justify;
+    margin-bottom: 1.25rem;
+    margin-top: calc(10vh - 1.5rem);
 }
 
 @media screen and (max-width: 768px) {
