--- a/index.css
+++ b/index.css
@@ -139,14 +139,23 @@ body {
     align-items: center;
 }
 
-/*.main-image img {
-    max-width: 100%;
-    height: auto;
+.main-image img {
+    width: 100%;        /* always span container width */
+    max-width: 800px;   /* pick a consistent max size */
+    height: 500px;      /* fixed height so they match */
+    object-fit: cover;  /* crop edges to fill box */
     border-radius: 8px;
     box-shadow: 0 2px 6px rgba(0,0,0,0.15);
-}*/
+}
 
-.main-image img {
+.sub-image-landscape  {
+    flex: 1;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.sub-image-landscape img {
     width: 100%;        /* always span container width */
     max-width: 800px;   /* pick a consistent max size */
     height: 500px;      /* fixed height so they match */
