--- a/index.css
+++ b/index.css
@@ -106,7 +106,8 @@ body {
     text-decoration: none;
     padding: 10px 0;
     cursor: pointer;
-    font-size: 14px;
+    font-size: 16px;
+    font-weight: 200;
     background: none;      
     border: none;  
     /* transition: font-weight 0.2s ease; */
@@ -132,7 +133,8 @@ body {
     text-decoration: none;
     padding: 10px 0;
     cursor: pointer;
-    font-size: 14px;     
+    font-size: 16px;    
+    font-weight: 200;
     border: none;  
 }
 
